--- a/ts-axios/examples/extend/index.html
+++ b/ts-axios/examples/extend/index.html
@@ -3,11 +3,11 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Base example</title>
+  <title>Extend example</title>
 </head>
 
 <body>
-  <script src="/__build__/base.js"></script>
+  <script src="/__build__/extend.js"></script>
 </body>
 
 </html>
