--- a/ts-axios/examples/config/index.html
+++ b/ts-axios/examples/config/index.html
@@ -3,11 +3,11 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Cancel example</title>
+  <title>Config example</title>
 </head>
 
 <body>
-  <script src="/__build__/cancel.js"></script>
+  <script src="/__build__/config.js"></script>
 </body>
 
 </html>
