--- a/again-ts/js-base/2-7/index.html
+++ b/again-ts/js-base/2-7/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <!-- <script src="./src/index.ts"></script> -->
-    <script src="./src/person.ts"></script>
+    <script src="./src/Order.ts" type="module"></script>
   </head>
   <body></body>
 </html>
