--- a/again-ts/js-base/2-7/index.html
+++ b/again-ts/js-base/2-7/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <!-- <script src="./src/index.ts"></script> -->
-    <script src="./src/3-2/2methodoverload.ts" type="module"></script>
+    <!-- <script src="./src/3-2/2methodoverload.ts" type="module"></script> -->
+    <script src="./src/3-5/ArrayList.ts" type="module"></script>
   </head>
   <body></body>
 </html>
