--- a/again-ts/js-base/2-7/index.html
+++ b/again-ts/js-base/2-7/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <!-- <script src="./src/index.ts"></script> -->
     <!-- <script src="./src/3-2/2methodoverload.ts" type="module"></script> -->
-    <script src="./src/4-3/test.ts" type="module"></script>
+    <script src="./src/4-3/test2.ts" type="module"></script>
   </head>
   <body></body>
 </html>
