--- a/again-ts/5-inherit/index.html
+++ b/again-ts/5-inherit/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <script src="./src/other-p.js" type="module"></script>
+    <script src="./src/5-23-use.js" type="module"></script>
   </head>
   <body></body>
 </html>
