--- a/again-ts/5-inherit/index.html
+++ b/again-ts/5-inherit/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <script src="./src/5-23-use.js" type="module"></script>
+    <!-- <script src="./src/5-20.js" type="module"></script> -->
   </head>
   <body></body>
 </html>
