--- a/again-ts/7-generic-paradigm/index.html
+++ b/again-ts/7-generic-paradigm/index.html
@@ -5,7 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <script src="./src/7-13-keyof/keyof2.ts" type="module"></script>
+    <script
+      src="./src/7-16-generic-interface/LinkedList.ts"
+      type="module"
+    ></script>
   </head>
   <body></body>
 </html>
