--- a/again-ts/10-decorator/index.html
+++ b/again-ts/10-decorator/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <script src="./src/3/1ClassDecorator.js" type="module"></script>
+    <script src="./src/5/1FactoryClassDecorator.js" type="module"></script>
   </head>
   <body></body>
 </html>
